--- a/tb_ws/src/tb3_cpp/CMakeLists.txt
+++ b/tb_ws/src/tb3_cpp/CMakeLists.txt
@@ -17,33 +17,37 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
 
+# install cpp
 add_executable(my_node src/my_node.cpp)
+
 target_include_directories(my_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-
+  $<INSTALL_INTERFACE:include>
+)
+  
 install(TARGETS my_node
-  DESTINATION lib/${PROJECT_NAME})
+  DESTINATION lib/${PROJECT_NAME}
+)
 
+# install launch and params
 install(DIRECTORY
   launch
   params
   DESTINATION share/${PROJECT_NAME}/
 )
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+# install python 
+ament_python_install_package(src)
+
+install(PROGRAMS 
+  src/node.py
+  src/nav.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 
 ament_package()
