--- a/tb_ws/src/tb3_cpp/package.xml
+++ b/tb_ws/src/tb3_cpp/package.xml
@@ -3,11 +3,15 @@
 <package format="3">
   <name>tb3_cpp</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Use nav2 api to make a turtlbot3 follow a clearpath husky</description>
   <maintainer email="larsmuggerud@proton.me">lars</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>rclpy</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
