nav2 api combined with minimalPublisher

--- a/tb_ws/src/tb3_cpp/CMakeLists.txt
+++ b/tb_ws/src/tb3_cpp/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
 
 # install cpp
 add_executable(my_node src/my_node.cpp)
@@ -44,6 +45,7 @@ install(DIRECTORY
 ament_python_install_package(src)
 
 install(PROGRAMS 
+  src/publisher.py
   src/node.py
   src/nav.py
   DESTINATION lib/${PROJECT_NAME}
