not working , trying to publish odometry

--- a/tb_ws/src/tb3_cpp/.vscode/settings.json
+++ b/tb_ws/src/tb3_cpp/.vscode/settings.json
@@ -3,5 +3,9 @@
     "python.autoComplete.extraPaths": [
         "/home/lars/masteruia/tb_ws/install/tb3_cpp/lib/python3.8/site-packages",
         "/opt/ros/galactic/lib/python3.8/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/lars/masteruia/tb_ws/install/tb3_cpp/lib/python3.8/site-packages",
+        "/opt/ros/galactic/lib/python3.8/site-packages"
     ]
 }
