--- a/tb_ws/src/uia_husky_0776/husky_group/params/control.yaml
+++ b/tb_ws/src/uia_husky_0776/husky_group/params/control.yaml
@@ -8,7 +8,7 @@ husky:
 
       husky_velocity_controller:
         type: diff_drive_controller/DiffDriveController
-
+husky:
   husky_velocity_controller:
     ros__parameters:
       left_wheel_names: [ "front_left_wheel_joint", "rear_left_wheel_joint" ]
