--- a/tb_ws/src/tb3_cpp/params/mapper_params_lifelong.yaml
+++ b/tb_ws/src/tb3_cpp/params/mapper_params_lifelong.yaml
@@ -14,7 +14,7 @@ tb:
       odom_frame: odom
       map_frame: map
       base_frame: base_footprint
-      scan_topic: /scan
+      scan_topic: tb/scan
       mode: mapping
 
       # lifelong params
